maze/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_79\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;H:\m2\maze\+libs\TGLib.jar;H:\m2\maze
-d
H:\m2\maze\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\m2\maze\MyFirstProgram.java
<---- end of javadoc command ---->
Loading source file H:\m2\maze\MyFirstProgram.java...
H:\m2\maze\MyFirstProgram.java:13: error: not a statement
        mazebot
        ^
H:\m2\maze\MyFirstProgram.java:13: error: ';' expected
        mazebot
               ^
2 errors
